syntax = "proto3";

package ClientMaster;

option java_multiple_files = true;
option java_generic_services = true;
option java_package = "com.tencent.client.master.protos";
option java_outer_classname = "ClientMasterProto";

import "common.proto";

enum Command {
    STOPANGEL = 0;
    STOPPSAGENT = 1;
    STOPWORKER = 2;
}

message RegisterReq {
    string host = 1;
    int32 port = 2;
}

message RegisterResp {
    Status ret = 1;
    int64 workId = 2;
    bool isChief = 3;
    int32 numTask = 4;
    AsyncModel asyncModel = 5;
    map<string, string> conf = 56;
    string msg = 6;
}

message SetAngelLocationReq {
    int64 workId = 1;
    string host = 2;
    int32 post = 3;
}

message SetAngelLocationResp {
    Status ret = 1;
    string msg = 2;
}

message GetAngelLocationReq {
    int64 workId = 1;
}

message GetAngelLocationResp {
    Status ret = 1;
    string host = 2;
    int32 post = 3;
    string msg = 4;
}

message HeartBeatReq {
    int64 workId = 1;
    int64 timestamps = 2;
}

message HeartBeatResp {
    Status ret = 1;
    string msg = 2;
    Command cmd = 3;
}

message SyncReq {
    int64 workId = 1;
    int32 clock = 2;
}

message SyncResp {
    Status ret = 1;
    string msg = 2;
}

service AngelCleintMaster {
    rpc Register (RegisterReq) returns (RegisterResp) {
    }
    rpc SetAngelLocation (SetAngelLocationReq) returns (SetAngelLocationResp) {
    }
    rpc GetAngelLocation (GetAngelLocationReq) returns (GetAngelLocationResp) {
    }
    rpc HeartBeat (HeartBeatReq) returns (HeartBeatResp) {
    }
    rpc Sync (SyncReq) returns (SyncResp) {
    }
}
